# MultiSpec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MultiSpec/src/exciton/: Makefile  exc.cpp  excp  input.cpp  input.h  main.cpp
MultiSpec/src/fft/: dofft.cpp
MultiSpec/src/math/: nummath.cpp  nummath.h
MultiSpec/src/software/fftw3/: Makefile  config.status  libtool
MultiSpec/src/software/fftw3/dft/scalar/: Makefile
MultiSpec/src/software/fftw3/dft/simd/altivec/: Makefile
MultiSpec/src/software/fftw3/dft/simd/avx/: Makefile
MultiSpec/src/software/fftw3/dft/simd/avx-128-fma/: Makefile
MultiSpec/src/software/fftw3/dft/simd/avx512/: Makefile
MultiSpec/src/software/fftw3/dft/simd/generic-simd128/: Makefile
MultiSpec/src/software/fftw3/dft/simd/generic-simd256/: Makefile
MultiSpec/src/software/fftw3/dft/simd/kcvi/: Makefile
MultiSpec/src/software/fftw3/dft/simd/vsx/: Makefile
MultiSpec/src/software/fftw3/doc/: Makefile
MultiSpec/src/software/fftw3/genfft/: Makefile
MultiSpec/src/software/fftw3/kernel/: Makefile
MultiSpec/src/software/fftw3/libbench2/: Makefile
MultiSpec/src/software/fftw3/mpi/: Makefile
MultiSpec/src/software/fftw3/rdft/scalar/r2cf/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/altivec/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/common/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/generic-simd128/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/generic-simd256/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/kcvi/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/sse2/: Makefile
MultiSpec/src/software/fftw3/rdft/simd/vsx/: Makefile
MultiSpec/src/software/fftw3/reodft/: Makefile
MultiSpec/src/software/fftw3/simd-support/: Makefile
MultiSpec/src/software/fftw3/tests/: Makefile  bench
MultiSpec/src/software/fftw3/tools/: Makefile
MultiSpec/src/software/xdrfile/: libtool
MultiSpec/src/software/xdrfile/include/: Makefile
MultiSpec/src/software/xdrfile/src/: xdrfile_c_test
MultiSpec/src/software/xdrfile/src/.deps/: xdrfile.Plo
MultiSpec/src/software/xdrfile/src/python/: Makefile
MultiSpec/src/time/: timeSt.h
MultiSpec/src/water/: input.cpp  input.h  main.cpp  run.sh  water.cpp  water.h
MultiSpec/tests/: q.inp  run.sh
doc/: doc.tex
examples/: confout.gro  e3b3.sh
scripts/: getNumFrames.sh
src/: CMakeLists.txt
src/amideI/: amideI.cpp  amideI.h  elmap.cpp  elmap.h  input.cpp  input.h  main.cpp  nncmap.cpp  nncmap.h  nnmap.cpp  nnmap.h
src/const/: const.h
src/exciton/: Makefile  exc.cpp  exc.h  excp  input.cpp  input.h  ir2d.cpp  ir2d.h  main.cpp
src/fft/: dofft.cpp  dofft.h
src/math/: nummath.cpp  nummath.h
src/software/fftw3/: FFTW3Config.cmake  config.h  fftw3.pc
src/software/fftw3/api/: Makefile
src/software/fftw3/dft/: Makefile
src/software/fftw3/dft/scalar/codelets/: Makefile
src/software/fftw3/dft/simd/: Makefile
src/software/fftw3/dft/simd/avx2/: Makefile
src/software/fftw3/dft/simd/avx2-128/: Makefile
src/software/fftw3/dft/simd/common/: Makefile
src/software/fftw3/dft/simd/neon/: Makefile
src/software/fftw3/dft/simd/sse2/: Makefile
src/software/fftw3/doc/FAQ/: Makefile
src/software/fftw3/m4/: Makefile
src/software/fftw3/rdft/: Makefile
src/software/fftw3/rdft/scalar/: Makefile
src/software/fftw3/rdft/scalar/r2cb/: Makefile
src/software/fftw3/rdft/scalar/r2r/: Makefile
src/software/fftw3/rdft/simd/: Makefile
src/software/fftw3/rdft/simd/avx/: Makefile
src/software/fftw3/rdft/simd/avx-128-fma/: Makefile
src/software/fftw3/rdft/simd/avx2/: Makefile
src/software/fftw3/rdft/simd/avx2-128/: Makefile
src/software/fftw3/rdft/simd/avx512/: Makefile
src/software/fftw3/rdft/simd/neon/: Makefile
src/software/fftw3/support/: Makefile
src/software/fftw3/threads/: Makefile
src/software/xdrfile/: Makefile  config.h  config.h.in~  config.status
src/software/xdrfile/autom4te.cache/: requests
src/software/xdrfile/src/: Makefile  test.xdr  trr2xtc
src/software/xdrfile/src/.deps/: trr2xtc.Po  xdrfile_c_test.Po  xdrfile_trr.Plo  xdrfile_xtc.Plo
src/system/: atomsRes.h  system.cpp  system.h
src/time/: timeSt.cpp  timeSt.h
src/traj/: traj.cpp  traj.h
src/util/: util.cpp  util.h
src/vec/: vecManip.h
src/water/: Makefile  input.cpp  input.h  main.cpp  mapsT.h  mapsTb.h  mapsTs.h  water.cpp  water.h  water_gen  wmapb.cpp  wmapb.h  wmaps.cpp  wmaps.h
tests/: iso.sh  q.inp  run.sh  sfg.sh  speciso.qs  speciso.sh  water_oh_stretch.sh
